<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/popupDialog_Background_Style"
    android:background="@drawable/rounded_corner_top_background_light_purple">

    <EditText
        android:id="@+id/categoryNameAdd_TextView"
        style="@style/popupDialog_EditText_Style"
        android:background="@drawable/rounded_corner_background_white_radius5dp"
        android:hint="@string/enter_category_name"
        app:layout_constraintBottom_toTopOf="@+id/bottom_constraint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_TextView" />

    <TextView
        android:id="@+id/title_TextView"
        style="@style/popupDialog_Header_TextView"
        android:text="@string/add_category"
        app:layout_constraintBottom_toTopOf="@+id/categoryNameEdit_TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottom_constraint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/categoryNameEdit_TextView">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cancle_constraint"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_corner_background_white_radius5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/add_constraint"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                style="@style/popupDialog_Button_TextStyle"
                android:drawableStart="@drawable/close_darkpurple_icon"
                android:text="@string/cancel"
                android:textColor="@color/dark_purple_background"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/add_constraint"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_corner_background_dark_purple_radius_5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/cancle_constraint"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                style="@style/popupDialog_Button_TextStyle"
                android:drawableStart="@drawable/add_icon"
                android:drawablePadding="10dp"
                android:text="@string/add"
                android:textColor="@color/white"
                android:textStyle="normal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>