<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="3dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/task_constraint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginEnd="3dp"
        android:background="@drawable/rounded_corner_background_light_green"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/alarm_done_ImageView"
            style="@style/task_RecyclerView_ImageView"
            android:src="@drawable/alarm_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/done_divider_View"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/doneTaskCategory_TextView"
            style="@style/task_RecyclerView_datetime_TextView"
            android:layout_marginEnd="10dp"
            android:text="@string/category_Name"
            android:textColor="@color/black"
            android:textStyle="normal"
            app:layout_constraintEnd_toStartOf="@+id/done_divider_View"
            app:layout_constraintTop_toBottomOf="@+id/doneTaskName_TextView" />

        <TextView
            android:id="@+id/doneTaskDate_TextView"
            style="@style/task_RecyclerView_datetime_TextView"
            android:text="@string/date"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/doneTaskName_TextView"
            app:layout_constraintTop_toBottomOf="@+id/doneTaskCategory_TextView" />

        <TextView
            android:id="@+id/doneTaskTime_TextView"
            style="@style/task_RecyclerView_datetime_TextView"
            android:layout_marginStart="10dp"
            android:text="@string/time"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/doneTaskDate_TextView"
            app:layout_constraintTop_toBottomOf="@+id/doneTaskCategory_TextView" />

        <CheckBox
            android:id="@+id/doneTask_CheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:scaleX="1.5"
            android:scaleY="1.5"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/doneTaskName_TextView"
            style="@style/recyclerView_layout_HeaderTextView"
            android:layout_width="0dp"
            android:layout_marginStart="60dp"
            android:text="@string/task_name"
            app:layout_constraintEnd_toStartOf="@+id/done_divider_View"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/taskID_TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/done_divider_View"
            android:layout_width="3dp"
            android:layout_height="0dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="35dp"
            android:layout_marginBottom="5dp"
            android:background="@color/white"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@+id/dummy_View"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/dummy_View"
            android:layout_width="1dp"
            android:layout_height="1dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/priorityColor_donTask_View"
            android:layout_width="5dp"
            android:layout_height="0dp"
            android:background="@drawable/priority_leftside_view"
            app:layout_constraintBottom_toTopOf="@+id/dummy_View"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>